--- a/KPMG_Task2.ipynb
+++ b/KPMG_Task2.ipynb
@@ -27,11 +27,15 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "<b>Stakeholders for whom research would be targeted to: </b>\n",
+    "- Project Manager\n",
+    "- Sprocket Central Pty Ltd Marketing Manager"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -77,40 +81,24 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>transaction_id</th>\n",
-       "      <th>product_id</th>\n",
-       "      <th>customer_id</th>\n",
-       "      <th>transaction_date</th>\n",
-       "      <th>online_order</th>\n",
-       "      <th>order_status</th>\n",
-       "      <th>brand</th>\n",
-       "      <th>product_line</th>\n",
-       "      <th>product_class</th>\n",
-       "      <th>product_size</th>\n",
-       "      <th>list_price</th>\n",
-       "      <th>standard_cost</th>\n",
-       "      <th>product_first_sold_date</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>2950</th>\n",
+       "      <th>2017-02-25 00:00:00</th>\n",
+       "      <th>False</th>\n",
+       "      <th>Approved</th>\n",
+       "      <th>Solex</th>\n",
+       "      <th>Standard</th>\n",
+       "      <th>medium</th>\n",
+       "      <th>medium.1</th>\n",
+       "      <th>71.49</th>\n",
+       "      <th>53.62</th>\n",
+       "      <th>41245</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2950</td>\n",
-       "      <td>2017-02-25</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>Approved</td>\n",
-       "      <td>Solex</td>\n",
-       "      <td>Standard</td>\n",
-       "      <td>medium</td>\n",
-       "      <td>medium</td>\n",
-       "      <td>71.49</td>\n",
-       "      <td>53.62</td>\n",
-       "      <td>41245.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
        "      <td>2</td>\n",
        "      <td>3</td>\n",
        "      <td>3120</td>\n",
@@ -126,7 +114,7 @@
        "      <td>41701.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <th>1</th>\n",
        "      <td>3</td>\n",
        "      <td>37</td>\n",
        "      <td>402</td>\n",
@@ -142,7 +130,7 @@
        "      <td>36361.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>2</th>\n",
        "      <td>4</td>\n",
        "      <td>88</td>\n",
        "      <td>3135</td>\n",
@@ -158,7 +146,7 @@
        "      <td>36145.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <th>3</th>\n",
        "      <td>5</td>\n",
        "      <td>78</td>\n",
        "      <td>787</td>\n",
@@ -173,34 +161,43 @@
        "      <td>709.48</td>\n",
        "      <td>42226.0</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>6</td>\n",
+       "      <td>25</td>\n",
+       "      <td>2339</td>\n",
+       "      <td>2017-03-08</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Approved</td>\n",
+       "      <td>Giant Bicycles</td>\n",
+       "      <td>Road</td>\n",
+       "      <td>medium</td>\n",
+       "      <td>medium</td>\n",
+       "      <td>1538.99</td>\n",
+       "      <td>829.65</td>\n",
+       "      <td>39031.0</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   transaction_id  product_id  customer_id transaction_date  online_order  \\\n",
-       "0               1           2         2950       2017-02-25           0.0   \n",
-       "1               2           3         3120       2017-05-21           1.0   \n",
-       "2               3          37          402       2017-10-16           0.0   \n",
-       "3               4          88         3135       2017-08-31           0.0   \n",
-       "4               5          78          787       2017-10-01           1.0   \n",
+       "   1   2  2950 2017-02-25 00:00:00  False  Approved           Solex  Standard  \\\n",
+       "0  2   3  3120          2017-05-21    1.0  Approved   Trek Bicycles  Standard   \n",
+       "1  3  37   402          2017-10-16    0.0  Approved      OHM Cycles  Standard   \n",
+       "2  4  88  3135          2017-08-31    0.0  Approved  Norco Bicycles  Standard   \n",
+       "3  5  78   787          2017-10-01    1.0  Approved  Giant Bicycles  Standard   \n",
+       "4  6  25  2339          2017-03-08    1.0  Approved  Giant Bicycles      Road   \n",
        "\n",
-       "  order_status           brand product_line product_class product_size  \\\n",
-       "0     Approved           Solex     Standard        medium       medium   \n",
-       "1     Approved   Trek Bicycles     Standard        medium        large   \n",
-       "2     Approved      OHM Cycles     Standard           low       medium   \n",
-       "3     Approved  Norco Bicycles     Standard        medium       medium   \n",
-       "4     Approved  Giant Bicycles     Standard        medium        large   \n",
-       "\n",
-       "   list_price  standard_cost  product_first_sold_date  \n",
-       "0       71.49          53.62                  41245.0  \n",
-       "1     2091.47         388.92                  41701.0  \n",
-       "2     1793.43         248.82                  36361.0  \n",
-       "3     1198.46         381.10                  36145.0  \n",
-       "4     1765.30         709.48                  42226.0  "
+       "   medium medium.1    71.49   53.62    41245  \n",
+       "0  medium    large  2091.47  388.92  41701.0  \n",
+       "1     low   medium  1793.43  248.82  36361.0  \n",
+       "2  medium   medium  1198.46  381.10  36145.0  \n",
+       "3  medium    large  1765.30  709.48  42226.0  \n",
+       "4  medium   medium  1538.99  829.65  39031.0  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,35 +208,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "transaction_id               0\n",
-       "product_id                   0\n",
-       "customer_id                  0\n",
-       "transaction_date             0\n",
-       "online_order               360\n",
-       "order_status                 0\n",
-       "brand                      197\n",
-       "product_line               197\n",
-       "product_class              197\n",
-       "product_size               197\n",
-       "list_price                   0\n",
-       "standard_cost              197\n",
-       "product_first_sold_date    197\n",
-       "dtype: int64"
+       "1                      0.000000\n",
+       "2                      0.000000\n",
+       "2950                   0.000000\n",
+       "2017-02-25 00:00:00    0.000000\n",
+       "False                  1.800090\n",
+       "Approved               0.000000\n",
+       "Solex                  0.985049\n",
+       "Standard               0.985049\n",
+       "medium                 0.985049\n",
+       "medium.1               0.985049\n",
+       "71.49                  0.000000\n",
+       "53.62                  0.985049\n",
+       "41245                  0.985049\n",
+       "dtype: float64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "transaction.isnull().sum()"
+    "# Check null values % in dataSet\n",
+    "transaction.isnull().sum() / transaction.shape[0] * 100.00"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Solex             4252\n",
+       "Giant Bicycles    3312\n",
+       "WeareA2B          3295\n",
+       "OHM Cycles        3043\n",
+       "Trek Bicycles     2990\n",
+       "Norco Bicycles    2910\n",
+       "Name: Solex, dtype: int64"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "transaction.Solex.value_counts()"
    ]
   },
   {
@@ -290,7 +314,19 @@
     }
    ],
    "source": [
-    "transaction.online_order.isnull()"
+    "def clean_transaction(df):\n",
+    "    \n",
+    "    #removing column having more than 60% null values\n",
+    "    df = df.drop(['Solex',axis=1])\n",
+    "    df = df.drop(['Standard',axis=1])\n",
+    "    df = df.drop(['medium',axis=1])\n",
+    "    df = df.drop(['medium.1',axis=1])\n",
+    "    df = df.drop(['53.62',axis=1])\n",
+    "    df = df.drop(['41245',axis=1])\n",
+    "    \n",
+    "    \n",
+    "    return df;\n",
+    "    "
    ]
   },
   {
